--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://github.com/yasmin203/ReactTemplateOne",
+  "homepage": "https://yasmin203.github.io/ReactTemplateOne/",
   "name": "projecttwo",
   "version": "0.1.0",
   "private": true,
@@ -41,5 +41,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://yasmin203.github.io/ReactTemplateOne/"
+  },
+  "author": "",
+  "license": "ISC"
 }
