--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://yasmin203.github.io/ReactTemplateOne/",
+  "homepage": "https://github.com/yasmin203/ReactTemplateOne",
   "name": "projecttwo",
   "version": "0.1.0",
   "private": true,
